macro(add_libnfs_testprog name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} nfs chimera_server)
    set_target_properties(${name} PROPERTIES
    TEST_FILE "${CMAKE_CURRENT_SOURCE_DIR}/${name}.c")
endmacro()

macro(add_libnfs_test testname prog)
    add_test(NAME chimera/server/${testname} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${prog} ${ARGN})
    get_target_property(test_file ${prog} TEST_FILE)
    set_tests_properties(chimera/server/${testname} PROPERTIES 
        ENVIRONMENT "TEST_FILE=${test_file}")
endmacro()

add_libnfs_testprog(libnfs_create)
add_libnfs_testprog(libnfs_mount)
add_libnfs_testprog(libnfs_link)
add_libnfs_testprog(libnfs_mkdir)
add_libnfs_testprog(libnfs_read)
add_libnfs_testprog(libnfs_readdir)
add_libnfs_testprog(libnfs_remove)
add_libnfs_testprog(libnfs_rename)
add_libnfs_testprog(libnfs_rmdir)
add_libnfs_testprog(libnfs_setattr)
add_libnfs_testprog(libnfs_statvfs)
add_libnfs_testprog(libnfs_symlink)
add_libnfs_testprog(libnfs_readdir_shares)

add_libnfs_test(libnfs_nfs3_linux_create libnfs_create -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_mount libnfs_mount -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_link libnfs_link -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_mkdir libnfs_mkdir -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_read libnfs_read -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_readdir libnfs_readdir -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_remove libnfs_remove -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_rename libnfs_rename -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_rmdir libnfs_rmdir -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_setattr libnfs_setattr -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_statvfs libnfs_statvfs -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_symlink libnfs_symlink -v 3 -b linux)
add_libnfs_test(libnfs_nfs3_linux_readdir_shares libnfs_readdir_shares -v 3 -b linux)

add_libnfs_test(libnfs_nfs4_linux_mount libnfs_mount -v 4 -b linux)
add_libnfs_test(libnfs_nfs4_linux_readdir libnfs_readdir -v 4 -b linux)
add_libnfs_test(libnfs_nfs4_linux_readdir_shares libnfs_readdir_shares -v 4 -b linux)

add_libnfs_test(libnfs_nfs3_memfs_mount libnfs_mount -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_create libnfs_create -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_readdir libnfs_readdir -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_link libnfs_link -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_read libnfs_read -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_readdir_shares libnfs_readdir_shares -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_mkdir libnfs_mkdir -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_remove libnfs_remove -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_rename libnfs_rename -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_rmdir libnfs_rmdir -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_setattr libnfs_setattr -v 3 -b memfs)
add_libnfs_test(libnfs_nfs3_memfs_symlink libnfs_symlink -v 3 -b memfs)


